--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="one">
         <h1> Magali Garot</h1>
     </br>
-        <h2>Web Developpeuse Junior</br> à BeCode.org</h2>
+        <h2 class="avantgarde">Web Developpeuse Junior à BeCode.org</h2>
     </div>
 
     <div class="two">
@@ -22,8 +22,7 @@
             4400 Flémalle</br>
             0498 05 29 70</br>
             magali.garot@gmail.com</br>
-            <a href="https://github.com/MagaliGarot">Github</a>
-        </p>
+            </p>
     </div>
     
 
@@ -38,10 +37,13 @@
 
     <div class="threetwo">
         <p>
-        <h2>Informatique : </h2> </br></br>
-            Web developpement : </br>
+            <a href="https://github.com/MagaliGarot"><img src="github.png"/></a>
+        </br></br>
+        <strong>Informatique :</strong> 
+        </br></br>
+            <strong>Web developpement :</strong> </br>
             HTML, CSS</br></br>
-            Graphisme :</br>
+        <strong>Graphisme :</strong></br>
             Photoshop, Illustrator, </br>
             Indesign,</br>
             Suite Affinity</br>
@@ -53,7 +55,7 @@
 
     <div class="four">
         <h2>Formations :</h2>
-        <p>2020-2021: Formation en Web Développement à BeCode.org. </br>
+        <p><strong>2020-2021: Formation en Web Développement à BeCode.org. </strong> </br>
             2007-2010 : Bachelier en arts plastiques visuels et de l'espace, Saint-Luc Liège. </br>
             2003-2007 : Enseignement secondaire artistique, Beaux-Arts de Namur. </br>
         </p>
@@ -66,30 +68,30 @@
              illustration ; numérique, vectorielle, traditionnelle ; BD.</br>
              Publications de plusieurs ouvrages pour l'édition et la presse jeunesse.
         </br></br>
-            2019-2019 : Gestion licence et CMR à l'UPTR d'Herstal (6 mois)
-            - Traiter les demandes de licences de transport, réaliser et suivre les dossiers.
-            - Être l'intermédiaire entre le transporteur (membre) et le SPF Mobilité et Transports.
-            - Traiter les demandes de lettres de voiture (CMR) ; devis, commandes et ventes.
+            2019-2019 : Gestion licence et CMR à l'UPTR d'Herstal (6 mois)</br>
+            - Traiter les demandes de licences de transport, réaliser et suivre les dossiers.</br>
+            - Être l'intermédiaire entre le transporteur (membre) et le SPF Mobilité et Transports.</br>
+            - Traiter les demandes de lettres de voiture (CMR) ; devis, commandes et ventes.</br>
         </br></br>
-            2018-2018 : Graphiste / Documentalise à l'Asbl Wallopoly (4 mois)
-            - Réalisation de logos, illustrations, brochures et de la com'.
-            - Créer, gérer le centre de documentation et l'archivage.
-            - Tâches administratives liées au service de formations et soutien à la direction.
+            2018-2018 : Graphiste / Documentalise à l'Asbl Wallopoly (4 mois)</br>
+            - Réalisation de logos, illustrations, brochures et de la com'.</br>
+            - Créer, gérer le centre de documentation et l'archivage.</br>
+            - Tâches administratives liées au service de formations et soutien à la direction.</br>
         </br></br>
-            2017-2018 : UCM de Wierde (7 mois)
-            Employée administrative (4 mois)
-            - Gestion de l'accueil, des appels téléphoniques, guidage, informer et conseiller la clientèle.
-            Dimona Production Officer (3 mois)
-            - Réalisation des demandes de déclaration Dimona et conseil des clients.
+            2017-2018 : UCM de Wierde (7 mois)</br>
+            Employée administrative (4 mois)</br>
+            - Gestion de l'accueil, des appels téléphoniques, guidage, informer et conseiller la clientèle.</br>
+            Dimona Production Officer (3 mois)</br>
+            - Réalisation des demandes de déclaration Dimona et conseil des clients.</br>
         </br></br>
-            2013-2014 : Libraire chez Belgique Loisirs (1 an)
-            - Accueil, guidage, conseil de la clientèle, mise en valeur des rayons et des vitrines,
-            gestion de la caisse, ouverture et fermeture du magasin.
+            2013-2014 : Libraire chez Belgique Loisirs (1 an)</br>
+            - Accueil, guidage, conseil de la clientèle, mise en valeur des rayons et des vitrines,</br>
+            gestion de la caisse, ouverture et fermeture du magasin.</br>
         </br></br>
-            2011-2013 : Animatrice d'ateliers à la Maison de la Culture d'Arlon (2 ans)
-            2012-2013 : Gestion de l'atelier BD (1 an)
-            2011-2013 : Gestion de l'atelier pinceau (2 ans)
-            - Mise en place des atliers, animation, gestion d'un budget et des projets artistiques
+            2011-2013 : Animatrice d'ateliers à la Maison de la Culture d'Arlon (2 ans)</br>
+            2012-2013 : Gestion de l'atelier BD (1 an)</br>
+            2011-2013 : Gestion de l'atelier pinceau (2 ans)</br>
+            - Mise en place des atliers, animation, gestion d'un budget et des projets artistiques</br>
         </p>
     </div>
 
