--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <div class="one">
         <h1> Magali Garot</h1>
-    </br>
         <h2 class="avantgarde">Web Developpeuse Junior à BeCode.org</h2>
     </div>
 
@@ -28,17 +27,12 @@
 
     <div class="three">
         <img src="profil.jpeg">
-        <p>Née le 26/09/1989</br>
-        à Namur</br>
-        31 ans</br>
-        Belge</br>
-        </p>
     </div>
 
     <div class="threetwo">
         <p>
-            <a href="https://github.com/MagaliGarot"><img src="github.png"/></a>
-        </br></br>
+            <a href="https://github.com/MagaliGarot"><img class="github" src="github.png"/></a>
+        </br></br></br></br>
         <strong>Informatique :</strong> 
         </br></br>
             <strong>Web developpement :</strong> </br>
@@ -49,6 +43,12 @@
             Suite Affinity</br>
             Acrobat.</br></br>
             Com' : Internet, MailChimp,</br> réseaux sociaux, </br>Google Forms.
+        </p>
+        </br>
+        <p>
+            <strong>Nationnalité : </strong> </br>Belge
+            Née le 26/09/1989 à Namur
+            31 ans
         </p>
 
     </div>
@@ -63,10 +63,10 @@
 
     <div class="five">
             <h2>Expériences Professionnelles :</h2>
-        <p>2010-2020 : Graphiste / Illustratrice
+        <p>2010-2020 : Graphiste / Illustratrice</br>
             - Réalisation : logo / identité graphique, support, brochure ;</br>
              illustration ; numérique, vectorielle, traditionnelle ; BD.</br>
-             Publications de plusieurs ouvrages pour l'édition et la presse jeunesse.
+             - Réalisation de travaux en vue de publications d'ouvrages pour l'édition et la presse jeunesse.
         </br></br>
             2019-2019 : Gestion licence et CMR à l'UPTR d'Herstal (6 mois)</br>
             - Traiter les demandes de licences de transport, réaliser et suivre les dossiers.</br>
