--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
 
     <div class="two">
-        <p> Rue Elva 89 / 02</br>
+        <p>  <strong>✉</strong> Rue Elva 89 / 02</br>
             4400 Flémalle</br>
-            0498 05 29 70</br>
-            magali.garot@gmail.com</br>
+            <strong>✆</strong> 0498 05 29 70</br>
+            <strong>✉</strong> magali.garot@gmail.com</br>
             </p>
     </div>
     
@@ -30,32 +30,31 @@
     </div>
 
     <div class="threetwo">
-        <p>
-            <a href="https://github.com/MagaliGarot"><img class="github" src="github.png"/></a>
-        </br></br></br></br>
+            <a href="https://github.com/MagaliGarot"><img class="github" src="github.png" width="50vw"/></a>
+            <a href="https://www.linkedin.com/in/magali-garot/"><img class="icone" src="linkedin.png" width="50vw"/></a>
+        </br></br></br>
         <strong>Informatique :</strong> 
         </br></br>
-            <strong>Web developpement :</strong> </br>
+        <strong class="orange">Web developpement :</strong> </br>
             HTML, CSS</br></br>
         <strong>Graphisme :</strong></br>
             Photoshop, Illustrator, </br>
-            Indesign,</br>
-            Suite Affinity</br>
+            Indesign, Suite Affinity,</br>
             Acrobat.</br></br>
             Com' : Internet, MailChimp,</br> réseaux sociaux, </br>Google Forms.
         </p>
         </br>
         <p>
-            <strong>Nationnalité : </strong> </br>Belge
-            Née le 26/09/1989 à Namur
+            <strong>Nationnalité : </strong> 
+        </br>Belge </br>
+        Née le 26/09/1989 à Namur </br>
             31 ans
         </p>
-
     </div>
 
     <div class="four">
         <h2>Formations :</h2>
-        <p><strong>2020-2021: Formation en Web Développement à BeCode.org. </strong> </br>
+        <p><strong class="orange">2020-2021: Formation en Web Développement à BeCode.org. </strong> </br>
             2007-2010 : Bachelier en arts plastiques visuels et de l'espace, Saint-Luc Liège. </br>
             2003-2007 : Enseignement secondaire artistique, Beaux-Arts de Namur. </br>
         </p>
