--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
 
     <div class="three">
-        <img src="profil.jpeg">
+        <img class="pictureprofil" src="profil.jpeg">
     </div>
 
     <div class="threetwo">
@@ -45,7 +45,7 @@
         </p>
         </br>
         <p>
-            <strong>Nationnalité : </strong> 
+            <strong>Nationalité : </strong> 
         </br>Belge </br>
         Née le 26/09/1989 à Namur </br>
             31 ans
